--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://lukmanov87.github.io/react-hooks",
+  "homepage": "https://lukmanov87.github.io/React-Hooks",
   "name": "react-hooks",
   "version": "0.1.0",
   "private": true,
